# vibes

./: .gitignore  README.md
.github/workflows/: awscope.yml  ledge.yml  vibeset.yml
awscope/: .env  .env.example  .gitignore  Dockerfile  PRD.md  README.md  TRD.md  docker-compose.yml  pyproject.toml  requirements-dev.txt
awscope/awscope/: cache.py  cli.py  config.py  exporter.py  grouper.py  models.py  object_store.py  scanner.py  store.py  web.py
awscope/awscope.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
awscope/awscope/prompts/: system_grouping.md
awscope/awscope/static/: index.html
awscope/tests/: conftest.py
awscope/tests/integration/: test_object_store.py  test_store.py
awscope/tests/unit/: test_cache.py  test_config.py  test_exporter.py  test_grouper.py  test_models.py
ledge/: .gitignore  PRD.md  README.md  TRD.md  settings.gradle.kts
ledge/app/: build.gradle.kts
ledge/gradle/: libs.versions.toml
vibeset/: PRD.md  README.md  TRD.md  go.mod  go.sum  install.sh  main.go
vibeset/cmd/: cmd_test.go  create.go  down.go  edit.go  list.go  pause.go  resume.go  root.go  set.go  status.go  version.go
vibeset/homebrew/: update-formula.sh  vibes.rb
vibeset/internal/config/: loader.go  loader_test.go  schema.go
vibeset/internal/executor/: apps.go  browser.go  browser_test.go  git.go  ide.go  ide_test.go  interface.go  interface_test.go  process.go  terminal.go  terminal_test.go
vibeset/internal/state/: active.go  active_test.go  git.go  pause.go  pause_test.go
vibeset/internal/wizard/: create.go
(+37 files in other folders)
