[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "awscope"
version = "0.1.0"
description = "AI-powered AWS resource inventory and grouping dashboard"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.34",
    "anthropic>=0.25",
    "fastapi>=0.111",
    "uvicorn>=0.29",
    "typer>=0.12",
    "rich>=13",
    "openpyxl>=3.1",
    "python-dotenv>=1.0",
]

[project.scripts]
awscope = "awscope.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["awscope*"]
